Added directional variable so sprites showed up

--- a/htmlVersion.html
+++ b/htmlVersion.html
@@ -23,7 +23,8 @@
             processing.keyReleased = function () { keyIsPressed = false; };
 
             with (processing) {
-            var srMegaman = function(x, y) {
+var d = 1;
+var srMegaman = function(x, y) {
     //all skin-colored pixels
     stroke(255, 235, 150);
     fill(255, 235, 150);
